Fixed more sonar reported issues